--- a/death.tex
+++ b/death.tex
@@ -226,7 +226,7 @@ prior abyss. That is not true, however, and the difference between the two expla
 time before a man's birth and the time after his death is time of which his death
 deprives him. It is time in which, had he not died then, he would be alive.
 Therefore any death entails the loss of some life that its victim would have led
-had he not died at that tor any earlier point. We know perfectly well what it
+had he not died at that or any earlier point. We know perfectly well what it
 would be for him to have had it instead of losing it, and there is no difficulty in
 identifying the loser.
 
