--- a/modone.tex
+++ b/modone.tex
@@ -41,11 +41,46 @@ plural=dialectics
 
 A dialectic, on the other hand, is aimed at inquiry. The goal is to learn something new about the issue under discussion. Unlike debate, in a dialectic your sharpest critic is your best friend. Critical evaluation of your argument brings new evidence and reasoning to light. The person you disagree with on a philosophical issue is often the person you stand to learn the most from (and this doesn’t necessarily depend on which of you is closer to the truth of the matter).
 
-Dialectic is sometimes referred to as the Socratic Method after the famous originator of this systematic style of inquiry. For this module, the reading is one of the more famous of Plato’s dialogues, namely The Apology. This will give you a good sense for how the Socratic Method works. Then watch for how the Socratic Method is deployed throughout the rest of the course.
+A common dialectic used in Philosophy is sometimes referred to as the Socratic Method after the famous originator of this systematic style of inquiry.\footnote{It should be noted that this style of dialectic is not unique to Socrates, the Greeks, or even the western world. Socrates just so happened to become the most famous practitioner of it. In what is today India, the philosopher/monk Moggaliputta-tissa (327–247 BCE) engaged in this style of investigation. See \citetitle{Katha} for examples. In the Americas, especially Mesoamerica, the Nahuas have tlamatinime (singular tlamatini) who regularly engage in this kind of dialectic. `Tlamatini' literally translates as `knower of things' but, given the role they fill in society and the manner in which they fill that role, `philosopher' is likely a better translation.} For this module, the reading is one of the more famous of Plato’s dialogues, namely The Apology. This will give you a good sense for how the Socratic Method works. Then watch for how the Socratic Method is deployed throughout the rest of the course.
 
-Doing philosophy boils down to thinking really hard, but in a structured and organized way. The thinking must be critical and comprehensive.
+Doing philosophy boils down to thinking really hard, but in a structured and organized way. The thinking must be critical and comprehensive. The critical nature of philosophy in general makes some people uneasy. A person gives reasons for a stance and then a good philosopher will ask questions about those reasons and judge whether they `hold water', so to speak. We are all uncomfortable with being proven wrong or being made to look like a fool (if the philosopher isn't gentle about it), but being wrong is a necessary aspect of learning, growing, and becoming better. In pre-colonial Nahuatl societies, there was/is a role called `tlamatini', philosopher. When early anthropologists during the colonial period asked the Nahuas to describe a good tlamatini, they replied with:\footnote{It should be noted that while the pronoun used in these passages is masculine, being a tlamatini was not and is not a gendered role, there have been women tlamatini and they have been well acclaimed for their successes.} 
 
-The point of arguments is to get at the \textbf{truth}. But, in the kind of world we live in today, it is worth taking a look at what philosophers mean by `truth', before we get too much into arguments.
+\factoidbox{The wise man: a light, a torch, a stout torch that does not smoke.
+
+A perforated mirror, a mirror pierced on both sides.
+
+His are the black and red ink, his are the illuminated manuscripts, he studies the illuminated manuscripts.
+
+He himself is writing and wisdom.
+
+He is the path, the true way for others.
+
+He directs people and things; he is a guide in human affairs.
+
+Teacher of truth, he never ceases to admonish.
+
+He makes wise the countenances of others; to them he gives a face; he leads them to develop it.
+
+He opens their ears; he enlightens them.
+
+He puts a mirror before others, he makes them prudent, cautious; he causes a face to appear on them.
+
+He attends to things; he regulates their path, he arranges and commands.
+
+He applies his light to the world.
+
+Thanks to him people humanize their will and receive a strict education.\autocite[p. 10-11]{Leon-Portilla1}}
+
+Similarly,  Bernardino de Sahag\'un, directly interviewing Nahuas who lived prior to colonization and remember the time, records the following description of a good tlamatini and a bad tlamatini (likely an amalgamation of many different people's accounts):
+
+\factoidbox{
+    The good [tlamatini] is a physician, a person of trust, a counselor; an instructor worthy of confidence, deserving of credibility, deserving of faith; a teacher. [He is] an advisor, a counselor, a good example; a teacher of prudence, of discretion; a light, a guide who lays out one’s path, who goes accompanying one. [He is] reflective, a confessor, deserving to be considered a physician, to be taken as an example. He bears responsibility, shows the way, makes arrangements, establishes order. He lights the world for one; he knows the land of the dead; he is dignified, unreviled. He is relied upon, acclaimed by his descendants, confided in, trusted -- very congenial. 
+    
+    The bad  [tlamatini] is a stupid physician, silly, decrepit, pretending to be a person of trust, a counselor, advised. He is vainglorious, vainglory is his; he is a pretender to wisdom . . ., vain, -- discredited. He is a socerer, a soothsayer, a medicineman, a [public robber.] A soothsayer, a deluder, he deceives, confounds, causes ills, leads into evil...\autocite[Book 10 page 29-30]{Sahagun1}}
+
+In both of these passages, we see that the role of a philosopher (tlamatini) is to advise, to council; the philosopher is to make people prudent, cautious. But why is that? Through dialectics and arguments, the philosopher exposes where people went wrong in their reasoning and directs them back on the right path, this makes them careful so that they don't go astray.\footnote{Sadly, much of the philosophical work which a tlamatini did was done through interpersonal conversations, not written down. This was true also for most of classical Greek Philosophy (like that of Socrates) and for most of classical Chinese Philosophy (like that of Confucius). What we do have from the pre-colonial period shows that the dominant style for \emph{written} Philosophy was \emph{poetry}, which makes some aspects of analysis difficult.\autocite[p. 36-37]{McLeod1}  As far as I am aware, the Nahuas did not have someone like Plato who passionately wrote down everything which happened in these exchanges.} Personally, I love the line ``he puts a mirror before others, he makes them prudent, cautious.'' This is a wonderful depiction of what Socrates and other philosophers do when grappling with a problem. We expose the faults in the reasoning or illuminate the good traits in the reasoning. When discussing something with another, we expose the faults or goods in their reasoning. Similarly, in both of these passages, we see that a philosopher (tlamatini) is interested in \emph{truth}. We want to discover the truth of some topic and then illuminate others to that truth. Arguments serve both of those desires. Not only can they be used to discover the truth but they are also used to expose others to it. 
+
+Before we dive too deep into the nature of arguments, however, given the kind of world we live in today, it is worth taking a look at what philosophers mean by `truth'.
 
 \subsection{Truth}
 \label{s:p1.1.1}
@@ -359,6 +394,7 @@ Modus Tollens, properly, we will mostly see in this class, as it's the easiest f
 
 \factoidbox{Ethical Egoism is the stance that the morality of an action is determined by how much it benefits the doer personally. By this theory, an action is moral when it benefits me and immoral when it does not. So, if Ethical Egoism is correct, then donating to charity, which will in no way benefit me, is always morally wrong. But, it seems obvious that the most moral actions we can do are selfless (in this case, donating when it won't benefit me). So, Ethical Egoism is incorrect.}
     
+This particular argument structure was taken to the extreme by the Indian Philosopher Moggaliputta-tissa (327-247 BCE) who would ask questions to the `opposing side' with the goal of them assenting to a conditional and its antecedent but rejecting its consequent. In doing so, Moggaliputta-tissa would catch them in a contradiction. You see, if a person accepts a conditional (If A, then B) and its antecedent (A), then by Modus Ponens, they would need to also accept the consequent (B). At the same time, if the person accepts a conditional but rejects its consequent, then by Modus Tollens, they must reject its antecedent.\footnote{As I mentioned in a footnote before, see \citetitle{Katha} for examples. Also, as fate would have it, `MT' is a common acronym or short-hand for `Modus Tollens' and Moggaliputta-tissa's transliterated initials are also `MT'.}    
 \subsection{Disjunctive Syllogism}
 \label{s:p1.3.3}
 
@@ -411,14 +447,14 @@ This page roughly finishes up our crash course on logic and critical thinking, b
 
 \subsection{Consistency}
 
-The first, basic, bare-bones standard for good critical thinking, and thereby good philosophy, is that the thinking must be consistent. This is more basic than saying that it's logical or that it lines-up with reality. For some train of thought to be consistent, it needs to lack two different things. First, it can't have any contradictions. A contradiction is a case where some proposition must be both true and false (at the same time) in order for your reasoning to work. In everyday life, it is (hopefully) very rare for us to encounter a contradiction either in our own or someone else's thinking, but there are cases where they show up, such as in conspiracy theories, and we only notice them well after the stance was explained. Take, for example, a conspiracy theory which has that both the Earth is the center of the universe and that gravity is just the Earth moving upwards at an ever increasing rate. This might not seem too contradictory on the face of it, but once you start digging into what must be true for both of those statements to be true, you will find that some proposition must be both true and false at the same time. There are other more blunt examples, such as:
+The first, basic, bare-bones standard for good critical thinking, and thereby good philosophy, is that the thinking must be consistent. This is more basic than saying that it's logical or that it lines-up with reality. For some train of thought to be consistent, it needs to lack two different things. First, it can't have any contradictions. A contradiction is a case where some proposition must be both true and false (at the same time) in order for your reasoning to work. In everyday life, it is (hopefully) very rare for us to encounter a contradiction either in our own or someone else's thinking, but there are cases where they show up, such as in conspiracy theories, and we only notice them well after the stance was explained. Take, for example, a conspiracy theory which has that both the Earth is the center of the universe and that gravity is just the Earth moving upwards at an ever increasing rate. This might not seem too contradictory on the face of it, but once you start digging into what must be true for both of those statements to be true, you will find that some proposition must be both true and false at the same time. There are other more blunt examples, such as:.\footnote{The example involving driving in New York comes from the Futurama episode ``The Lesser of Two Evils", season 2, episode 11. The example involving the equality of animals is from George Orwell's Animal Farm.} 
 
 \begin{tabular}{p{2.5in}|p{2.5in}}
 Contradictory &Non-Contradictory\\\hline
 The non-existent ghosts stole the painting &The ghosts stole the painting\\\hline
 Bobby Joe committed the crime in New York (in person) while in LA. &Bobby Joe made it seem like he was in LA in order to cover up the crime.\\\hline
-No one drives in New York because there is too much traffic.\footnote{This is from the Futurama episode ``The Lesser of Two Evils", season 2, episode 11.} &The traffic in New York is so bad that most people walk.\\\hline
-All animals are equal, but some are more equal than others.\footnote{This is from George Orwell's Animal Farm.} &Either all animals are equal or they aren't all equal.\\\hline
+No one drives in New York because there is too much traffic.&The traffic in New York is so bad that most people walk.\\\hline
+All animals are equal, but some are more equal than others. &Either all animals are equal or they aren't all equal.\\\hline
 I make my own choices, with my wife's permission. &What I ultimately choose should be a joint decision between my wife and I.\\\hline
 \end{tabular}
 
@@ -443,8 +479,16 @@ As you should be able to see, the flow of the argument isn't there any more, the
     \item[]André the Giant is André René Roussimoff.
     \item[]Therefore, André René Roussimoff is so called because of his great size.
 \end{earg}
-That last line should seem off to you. This is because there is equivocation in this reasoning. In the first two lines we are talking about the names, but in the third we are talking about what the names pick out in the world. The equivocation is in the shift between talking about the word and the person.
+That last line should seem off to you. This is because there is equivocation in this reasoning. In the first two lines we are talking about the names, but in the third we are talking about what the names pick out in the world. The equivocation is in the shift between talking about the word and the person. In this case, the phrase `so called' shifts the reference from the person being referenced to the phrase used to reference them. Here is an example of this same argument made clear by removing the equivocation: 
 
+\begin{earg}
+    \item[]André the Giant is called `André the Giant' because of his great size.
+    \item[]André René Roussimoff is called `André René Roussimoff' because that's what his mother named him.
+    \item[]André the Giant is André René Roussimoff.
+    \item[]Therefore, André René Roussimoff is called `André the Giant' because of his great size.
+\end{earg}
+
+As you can see, simply being clear about what we mean by the phrase `so called' prevents us from thinking that André René Roussimoff is called `André René Roussimoff' because of his great size, rather André René Roussimoff is called `André the Giant' because of his great size, which does not have any problems. 
 \subsection{Coherency}
 
 The next basic requirement for good critical thinking is that it needs to be coherent. Coherency is not the same as consistency, though there is a fair bit of overlap. Each premise, each proposition used in the reasoning need to relate to each other in a reasonable way. There can't be any strange or unorthodox jumps in the argument. You can think of this like a spider web, each of the strands is connected together and it would not be as strong if some of those strands were removed. For example, take this argument:
