--- a/modsix.tex
+++ b/modsix.tex
@@ -163,19 +163,31 @@ Different stances in Epistemology regarding knowledge can be reduced to differen
 Justification for knowledge is different than other forms for justification which you might encounter (and even then there is some debate about the nature of that justification). In ordinary life, you are entitled to your medical records, which means that you are justified in asking for them. This kind of justification is related to, but not the same as, the kind of justification which we have for knowledge. Epistemic justification is the kind found when it comes to knowledge. This is background reasoning which supports the belief. A belief is epistemically justified if we have sufficiently good reason to think that the belief is true. 
 \section{Part \thechapcount.\theseccount: Why justification is important}\stepcounter{seccount}
 
-Some might try to answer the question ``what is knowledge?'' with a relatively simple answer ``you know it if you are correct.'' Using the equation from before, this stance could be characterized as K=T\footnote{if it's true then you know it}, K=B\footnote{knowledge is belief, there is no difference.}, or  K=TB\footnote{if it's true and you believe it, then you know it.} All three of these have a problem with getting lucky, where you guess and it turn out you were right. As an example, take this case:
+Some might try to answer the question ``what is knowledge?'' with a relatively simple answer ``you know it if you are correct.'' Using the equation from before, this stance could be characterized as K=TB.\footnote{if it's true and you believe it, then you know it.} This account has a fairly basic problem, you could just get lucky. For an example, take this case:
 
 \factoidbox{Recently, my little brother and I were binging the show Dragon Ball Z. My little brother came to me with a theory about the time travel based plots in the show.  As an expert on theories of time travel, I thought this was great. He came up with the idea that there had to be four different timelines, given what he had seen thus far. Explaining that there had to be two different versions of the same character and so forth. As it turns out, he was correct, there did need to be two different versions of that character and there needed to be 4 timelines, but for completely different reasons than the ones he laid out. He later said that it didn't feel like he was correct, something was missing.}
 
-I quickly recognized what was missing: adequate \gls{justification}. The structure of his reasoning, though it lead to the correct answer, wasn't accurate. As a result, merely being correct is not enough for us to claim that we knew it. At the same time, merely having reasons to think that the belief is true is not enough to say that you knew it. One could have reasons and those reasons could be reasonalby good under normal circumstances but something unbeknownst to you `throws a wrench into it', so to speak. 
+I quickly recognized what was missing: adequate \gls{justification}. The structure of his reasoning, though it lead to the correct answer, wasn't accurate. As a result, merely being correct is not enough for us to claim that we knew it. At the same time, merely having reasons to think that the belief is true is not enough to say that you knew it. You could have reasons and those reasons could be reasonably good under normal circumstances but something, unbeknownst to you, `throws a wrench into it', so to speak. The goal of justification, it seems, is to protect us against luck. When someone claims to know something, the justification makes it more than a lucky guess.
 
-You don't need to think very hard to come up with examples where a person's reasoning was flawed and that lead them to think they knew when they did not. In Philosophy, there is a long history of problems about justification called Gettier Problems, after the author of the most famous paper on this topic, Edmund Gettier.\footnote{This paper was so successful that Edmund Gettier did not feel the need to write another, this is his one and only paper. \autocite{Gettier1}} Here is a slight re-imagining of one of the thought experiments which likely inspired Gettier from the Austrian philosopher Alexius Meinong: 
+\subsection{Gettier Problems and Justification}
+
+You don't need to think very hard to come up with examples where a person had, given the circumstance, faulty reasons to think that something was true, believed it, and was lucky that it was true. In Philosophy, there is a long history of problems about justification called Gettier Problems, after the author of the most famous paper on this topic, Edmund Gettier.\footnote{This paper was so successful that Edmund Gettier did not feel the need to write another, this is his one and only paper. \autocite{Gettier1}} Since the publication of that paper, other examples from earlier philosophers have come to light. One of the earliest examples of a Gettier Problem comes from the Indian philosopher Dharmottara (c. 770 CE):
+
+\factoidbox{Imagine that we are seeking water on a hot day. We suddenly see water, or so we think. In fact, we are not seeing water but a mirage, but when we reach the spot, we are lucky and find water right there under a rock. Can we say that we had genuine knowledge of water? The answer seems to be negative, for we were just lucky.\autocite[Quoted in][p. 292]{Dreyfus1}}
+
+According to Dreyfus, Dharmottara draws from this case that merely being accurate is not enough nor is merely having reasons and being accurate. Rather, the justification, the reasons one has to think that the belief is accurate, must be ``in accordance with the proper standards of evaluation.''\autocite[p. 293]{Dreyfus1} In the above case, while we were accurate in our conclusions, we did not take into account the special circumstances of our environment, which made our reasoning faulty.
+
+Gettier himself was likely inspired by the works of Alexius Meinong, an Austrian philosopher, who gives a case much like Dharmottara's in his work \citetitle{Meinong2}, here it is in its entirety:\footnote{There have been claims that Meinong also gives a case involving a person ``disturbed by ringing in his ears at a time when, as luck would have it, someone happens to be ringing the doorbell'' \parencite[p. 92]{Chisholm1}. Chisholm cites this to page 619 of volume 5 of the Meinong \emph{Gesamtausgabe}. Given my limited resources, I have not been able to locate that passage.}
+
+\factoidbox{It is well known that so-called Aeolian harps, made up of a series of reed pipes, are affixed to garden sheds and to other more or less inappropriate places, and that the wind will ``stroke” (them) and possibly create a chord. Let’s say that someone who has lived near such a device (i.e., a harp), becomes hard of hearing in the course of time and has concurrently developed a disposition to auditory hallucinations. Then it could easily come to pass that he could hallucinate the sounds of the Aeolian harp at the exact time (the harp) can actually be heard. In this case his hallucination would parallel what actually happened; because if our hallucinator (as he normally would) says, ``Now the Aeolian harp is sounding,” he would be correct. However, in this case one could only consider his perception to have been a strange coincidence, rather than a case of his actually having heard the sound.\autocite[Translated by Robert Rabe. ][p. 30-31]{Meinong2}}  
+
+Given that I have never seen nor heard an Aeolian harp, I think that this example has become quite dated. So, to modernize it a bit,\footnote{Keeping with the spirit and the resulting issues with justification.} consider the following example:  
 
 \thoughtex{The Park Violinist}{Imagine that you live near a park and most days at noon, a violinist plays. You can hear the beautiful music from your dinning room and, it seems right to say that if you hear the music, then you know that the violinist is playing. However, one day, because you, unknowingly, drank some bad tea, at noon, you go temporarily deaf and have an auditory hallucination of a violin playing. While it is true that the violinist is out there and you hear the music, does it follow that you know the violinist is out there?}{parkviolinist.jpg}{A man playing the violin inside of a park.}
 
-In this case, much like the one involving my little brother and Dragon Ball Z, the person (you) has reasons to think that something is the case, they believe that it is the case, and it happens to be the case, so they have True Justified Belief. For cases like these, most people would say that, though you were right, you don't know that the violinist is playing. The issue comes from the fact that the reasoning, the justification, went awry in some way.\footnote{For a comprehensive history of these Gettier Problems, see Roderick Chisholm's Theory of Knowledge, Third Edition (it must be the third, the earlier editions lacked this content). The Park Violinist case I give above is based on Meinong's case involving an Aeolian harp, which is presented there. \autocite[p. 91-99]{Chisholm1}} One of the lively areas of Epistemology today is figuring out ways to `degettierize' the justification to avoid cases where failing to track accurately or having `false lemmas' allow for knowledge claims.\footnote{See \citetitle{Ichikawa1} for some more content on this, especially sections 3 and 4. This article refers to this additional element to True Justified Belief as `degetttiering' but earlier editions of the article called it `degettierize'. }
+In this case, much like the one involving my little brother and Dragon Ball Z and Dharmottara's case, the person has reasons to think that something is the case, they believe that it is the case, and it happens to be the case, so they have True Justified Belief, but it seems like something is missing, though the person was right, they didn't \emph{know}. The issue comes from the fact that the reasoning, the justification, went awry in some way.\footnote{For a comprehensive history of these Gettier Problems, see \citetitle{Chisholm1} (it must be the third, the earlier editions lacked this content). \autocite[p. 91-99]{Chisholm1}} We could follow Dharmottara's thinking and say that in all of the above cases, the person wasn't taking into account the special circumstances of their situation and thereby deviated from the standards of justification.\footnote{In the Dragon Ball Z case, my little brother failed to recognize that he had not seen the entirety of the plot, so he did not have enough information to make a judgement call. In Dharmottara's case, `we' did not recognize that the heat could cause a mirage, which lead us astray. In Meinong's case, the person failed to recognize that they had a disposition towards auditory hallucinations. And in the Park Violinist Case, `you' failed to recognize that the tea was bad and could cause hallucinations, making you trust your senses more than warranted.} We could say that, in each case, there was a premise, a \emph{lemma} or intermediate step in the reasoning, which was false and that made it not count as knowledge.\footnote{In the Dragon Ball Z case, my little brother included false premises which explained aspects of the show but those aspects had alternative explanations given more information. In Dharmottara's case, the justfication had that there was a particular source of water in that location and, while there was water there, it was not from that particular source. In Meinong's case, the false premise was that the sound the person was hearing was from the Aeolian harp, when it was actually from the hallucination. And in the Park Violinist case, the reasoning includes that you hear the violinist playing and, while the violinist was playing, you don't actually hear them playing, you hear the hallucination.} One of the lively areas of Epistemology today is figuring out ways to `degettierize' the justification to avoid cases where failing to adhere to some standards or having `false lemmas' allow for knowledge claims.\footnote{See \citetitle{Ichikawa1} for some more content on this, especially sections 3 and 4. This article refers to this additional element to True Justified Belief as `degetttiering' but earlier editions of the article called it `degettierize'. }
 
-We see that the real area of debate, what really separates knowledge from a lucky belief, is the justification. As a result, much of the debate in Epistemology centers around the standards for justification. If you believe something and that thing happens to be true, what else is needed for you to know it? It should be noted, however, that 100\% certainty, no chance of being wrong, is not necessarily required for justification. For example, in a real world case, you can know that your sink isn't leaking without being in the room with the sink. There is a chance you are wrong, given your evidence. Justification can come in degrees and the more justified a belief is, then the more likely it is to be accurate/true. In the violinist example, experience and prior evidence certainly gives ample justification for knowledge in most cases, but you would have had the same evidence if the violinist had been sick and unable to play. This is why good critical thinkers question, doubt, or even reject beliefs if they lack adequate justification. This is also why good critical thinkers look deeply at the structure of their justification, how their beliefs relate to each other, which also calls back to one of Socrates' core questions; what is your evidence?
+We see that what really separates knowledge from a lucky belief is the justification. Not only that, the justification must be without some potential faults. As a result, much of the debate in Epistemology centers around the standards for justification. It should be noted, however, that 100\% certainty, no chance of being wrong, is not necessarily required for justification. For example, in a real world case, you can know that your sink isn't leaking without being in the room with the sink. There is a chance you are wrong, given your evidence. Justification can come in degrees and the more justified a belief is, then the more likely it is to be accurate/true. In the violinist example, experience and prior evidence certainly gives ample justification for knowledge in most cases, but you would have had the same evidence if the violinist had been sick and unable to play. This is why good critical thinkers question, doubt, or even reject beliefs if they lack adequate justification. This is also why good critical thinkers look deeply at the structure of their justification, how their beliefs relate to each other, which also calls back to one of Socrates' core questions; what is your evidence?
 
 
 
@@ -199,6 +211,7 @@ Justification for knowledge is always how your beliefs relate to each other. You
 For this, we see that my beliefs form a pyramid, or tower, like structure, which leads us right into the first theory of justification, Foundationalism, which is what Descartes used in the Meditations.
 
 \section{Part \thechapcount.\theseccount: Foundationalism}\stepcounter{seccount}
+
 Much of the debate in Epistemology, as I mentioned, centers around justification. There are three dominate theories of justification which we will cover. Doing a little introspection should make it clear that some beliefs are built upon others. One belief is justified by another belief. For a particularly strange example, take this case: 
 
 \thoughtex{Cube Earth}{I believe that the Earth is actually a cube. It is not spherical but it is also not flat. I believe this because I think that the middle of two extremes is the most  likely to be accurate. I also believe that there are two extreme stances in the debate over the shape of the Earth. One side claims that the Earth is spherical while the other side claims that the Earth is a flat disk. The two beliefs about the extreme stances with the general belief about the accuracy of a middle ground leads me to the conclusion that the Earth must be a cube.}{CubeEarth.jpg}{The Earth in the shape of a cube rather than a sphere.}
@@ -217,9 +230,9 @@ Finding your foundational beliefs might require a little help, or a highly quest
 
 Foundational beliefs tend to be very basic logical or experiential truths. For example, something like `my senses are accurate' or `if P implies Q and P is true, then Q is true', or that there can't be contradictions. These all can be used to build up a structure of beliefs, which, though possible to be inaccurate, still count as justification. Additionally, Foundationalism holds that the beliefs you have, if they are justified, cannot directly or indirectly justify themselves. This is to say that there cannot be circular justification. For example, take this strange structure of justification:
 
-\factoidbox{I believe that Mt. Rainer is an active volcano. I believe this because my middle school teacher told me so and I believe that she was accurate in her claim. I believe she was accurate in claiming this because I believe that Mt. Rainer is an active volcano.}
+\factoidbox{I believe that Mt. Rainier is an active volcano. I believe this because my middle school teacher told me so and I believe that she was accurate in her claim. I believe she was accurate in claiming this because I believe that Mt. Rainier is an active volcano.}
 
-Notice that the first and final beliefs in this structure of reasoning are the same. Ultimately, it does not reach out to anything more than my belief that Mt. Rainser is an active volcano. If someone explained their stance in this sort of way, most people would be, correctly, very skeptical of their reasoning. Some might claim, however, that circular reasoning like this is not always bad. This case, in isolation, is but if we add more beliefs and increase the network of beliefs, showing more connections, then the circles will improve rather than diminish the justification. 
+Notice that the first and final beliefs in this structure of reasoning are the same. Ultimately, it does not reach out to anything more than my belief that Mt. Rainier is an active volcano. If someone explained their stance in this sort of way, most people would be, correctly, very skeptical of their reasoning. Some might claim, however, that circular reasoning like this is not always bad. This case, in isolation, is but if we add more beliefs and increase the network of beliefs, showing more connections, then the circles will improve rather than diminish the justification.\footnote{This manner of response is primarily used in the accounts of justification opposed to Foundationalism. Coherentism is the primary example of this Coherentism allows for and necessitates circular justification.}
 
 \newglossaryentry{foundationalism}
 {
@@ -273,7 +286,8 @@ description={The stance in Epistemology concerning justificaton that all beliefs
 
 
 \section{Part \thechapcount.\theseccount: Native American Epistemologies}\stepcounter{seccount}
-By ``Native American Epistemologies'', I am referring to the systems of justification and knowledge used by the peoples indigenous to what is today the continental United States. The peoples, cultures, and epistemological systems native to the Americas (North and South) are very diverse, with each having subtle differences from their neighbors and those differences become greater the greater the distances between them. It pays, therefore, to be mindful that this is a cursory overview of the common features had by some of the peoples in a relatively small section of the Americas as a whole.\footnote{There are also the Epistemological systems used by the peoples native to Mesoamerica and various regions across South America. These systems may or may not have all or some of these common features.}  
+
+By ``Native American Epistemologies'', I am referring to the systems of justification and knowledge used by the peoples indigenous to what is today the continental United States. The peoples, cultures, and epistemological systems native to the Americas (North and South) are very diverse, with each having subtle differences from their neighbors and those differences become greater the greater the distances between them. It pays, therefore, to be mindful that this is a cursory overview of the common features had by some of the peoples in a relatively small section of the Americas as a whole.\footnote{There are also the Epistemological systems used by the peoples native to Mesoamerica and various regions across South America. These systems may or may not have all or some of these common features. For example, the epistemic systems native to Mesoamerica share in the Coherentist model but imploy the correspondence account of truth, unlike those north of the Rio Grande and south of Panama (at least for Nahuatl Philosophy). \autocite[p. 69]{McLeod1}}  
 
 All cultures, the world over, can have their requirements for knowledge be characterized, roughly, as `True Justified Belief'. In fact, we can make this into a nice little equation, like so:
 
