--- a/modthree.tex
+++ b/modthree.tex
@@ -86,7 +86,7 @@ This is making two assumptions which are closely linked and we would need to loo
 
 \subsection{The Mary's Room Thought Experiment}
 
-This is a relatively recent thought-experiment, a case to think about and try to understand with interesting implications. It was written in 1982 by Frank Jackson. The point of it is to give reason to think that everything is not just physical. This thought experiment leads to an argument for some flavor of dualism. I know that it is not very realistic, but I have amended it to make it more so. Here is the case:
+This is a relatively recent thought-experiment, a case to think about and try to understand with interesting implications. It was written in 1982 by Frank Jackson.\autocite{Jackson1982} The point of it is to give reason to think that everything is not just physical. This thought experiment leads to an argument for some flavor of dualism. I know that it is not very realistic, but I have amended it to make it more so. Here is the case:
 
 \thoughtex{Mary's Room}{Two undercover spies fell in love and had a child. Due to the nature of their work, the government took the child and locked her a way in a room. The child in named “Mary”. Mary was forced to grow up in this room, but here’s the kicker, there’s only black and white. Mary never experiences colors at all. Mary, in this room, grows to be a brilliant scientist. She specializes in the neurophysiology of vision and acquires all the physical information there is to obtain about what goes on when we see a red rose, or the sky, and use terms like ‘red’, ‘blue’, and so on. She discovers, for example, just which wavelength combinations from the sky stimulate the retina, and exactly how this produces via the central nervous system the contraction of the vocal chords and expulsion of air from the lungs that results in the uttering of the sentence ‘The sky is blue’... Over the years, the political climate has changed and this sort of undercover work and the cloistering of the children becomes very taboo. The president finds out about Mary’s plight and orders her to be released. What will happen when Mary is released from her black and white room? On the day of her release, the president is present and hands her a red rose. Does she learn anything in that moment?}{Marysroom.jpg}{A black and white room with a young woman looking at a computer.}
 
@@ -192,13 +192,25 @@ As before, this means that there cannot be causation from the mental to the phys
 \subsubsection{Pre-Established Harmony}
 There is one theory which accepts, whole hog, the idea that there are two kinds of things in the world, mental and physical, and that the two cannot affect each other. This view, put forth by Leibniz,\autocite[p. 33]{Leibniz2} states that a person has two things, a soul and a physical body (a person is composed of a mental substance and a physical substance), but makes three further claims:
 \begin{enumerate}
-    \item[]No state of a mind can cause a state in another mind or body and no body can cause a state in another body or mind (basically, minds and bodies can't interact, minds and minds can't interact, and bodies and bodies can't interact).
-    \item[]Every state of a substance which wasn't a miracle and wasn't its starting state, was caused by the previous state of that substance (basically, how some substance was determines how it will be).
-    \item[]Minds and bodies are programmed (or pre-determined) to behave in mutual coordination with each-other. 
+    \item No state of a mind can cause a state in another mind or body and no body can cause a state in another body or mind (basically, minds and bodies can't interact, minds and minds can't interact, and bodies and bodies can't interact).
+    \item Every state of a substance which wasn't a miracle and wasn't its starting state, was caused by the previous state of that substance (basically, how some substance was determines how it will be).
+    \item Minds and bodies are programmed (or pre-determined) to behave in mutual coordination with each-other. 
 \end{enumerate}
-This is the Pre-Established Harmony stance. The first claim gives us our answer to the Causation Problem, namely, there's not any causation between the mental and the physical. Rather, because of the third claim, it merely appears to be causation. There's correlation but not causation. The second claim smooths out any wrinkles which may appear in the stance because it gives us that the world is deterministic, lights and clock-work. 
+This is the Pre-Established Harmony stance, more commonly know today as \Gls{parallelism}. The first claim gives us our answer to the Causation Problem, namely, there's not any causation between the mental and the physical. Rather, because of the third claim, it merely appears to be causation. There's correlation but not causation. The second claim smooths out any wrinkles which may appear in the stance because it gives us that the world is deterministic, lights and clock-work. 
 
-For most versions of Pre-Established Harmony out there, it would seem, the `programming' of the substances is arranged by God or some other divine architect.\footnote{This can be related to divine foreknowledge as a problem for free will.} Many people think that God is all-knowing, and this will appear again when we discuss arguments for and against the existence of God. If this is correct, then we can explain this by saying that God was the one who programmed the substances. But this leads to a further worry, and a potential problem. 
+For most versions of Pre-Established Harmony out there, it would seem, the `programming' of the substances is arranged by God or some other divine architect.\footnote{This can be related to divine foreknowledge as a problem for free will.} Many people think that God is all-knowing, and this will appear again when we discuss arguments for and against the existence of God. If this is correct, then we can explain this by saying that God was the one who programmed the substances. But this leads to a further worry, and a potential problem. Strictly speaking, the inclusion of a divine programmer for the seeming interaction is not necessary, it is possible to have this theory with out it. For example, at the start of time, the mental and physical substances were, luckily, set on paths which allowed for them to run in parallel and seemingly interact, but they do not. 
+
+\newglossaryentry{parallelism}
+{
+name=parallelism,
+description={The stance in that substance dualism is correct but there is no causation or interaction between the mental and physical substances. The interaction is actually an illusion}
+}
+
+Some might recoil at the idea that there is no causal interaction between the mental and physical substances, it seems obvious that there is causation. But, the parallelist would argue, this is a carefully orchestrated illusion. Consider this simple case:
+
+\thoughtex{The Movie Theaters}{Consider for a moment the old reel movie projectors, or, for the younger generation, downloading a movie from a less than reputable website. When the movie is playing, there are actually two independent processes going on. First, we have the video being projected onto the screen (or the video file running). There is no audio for this, it is silent. Second, we have the audio recording which is played through speakers (or the audio file which is played). There is no video in this. To fully appreciate the movie, the audio and the video must be played in harmony. It is quite obvious when the video and audio tracks are out of sync (or worse, when the wrong audio is played for the video). But, something happening in the video causing a sound to be heard is actually an illusion. There is no interaction, the tracks are run in parallel.}{movietheater2.jpg}{A movie projector projecting a `western' onto a screen in a theater}   
+
+This case points to a very relatable way in which our intuitions about causation between mental and physical substances can be misleading, as it be that the physical substances are as the video and the mental substances are as the audio, correlation without causation. 
 
 As I mentioned before, many people like Substance Dualism because it will get you some kind of Free Will, but Pre-Established Harmony denies the possibility of a substance doing other than how it was programmed, everything in the world is deterministic. This denies the possibility of Free-Will. People will have the illusion of control, but that control is much like a little kid holding a toy steering wheel. Sure they may mimic, without realizing, the movements of the driver perfectly, but they are not the one driving the car. 
 
